# newtype-ops

./: .travis.yml  CHANGES.md  Cargo.toml  README  README.md
.github/workflows/: ci.yml
src/: lib.rs
test-crates/edition-2015/: Cargo.toml  main.rs
test-crates/edition-2018/: Cargo.toml  main.rs
tests/: nostd.rs  string.rs
